[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/icons/icon_128_collapse.svg" type="Texture" id=1]
[ext_resource path="res://assets/icons/icon_128_expand.svg" type="Texture" id=2]
[ext_resource path="res://components/config/config_templates/component_config_array_container.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/icon_128_add.svg" type="Texture" id=5]
[ext_resource path="res://components/elements/styled/icon_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/icons/icon_128_to_null.svg" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=8]
content_margin_top = 2.0
content_margin_bottom = 4.0
bg_color = Color( 0.0392157, 0.145098, 0.247059, 1 )
border_color = Color( 0, 0.329412, 0.639216, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 8.0

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 20.0
content_margin_right = 0.0
content_margin_top = 10.0
content_margin_bottom = 20.0
bg_color = Color( 0.0470588, 0.0941176, 0.133333, 1 )
border_width_left = 5
border_width_bottom = 4
border_color = Color( 0.0392157, 0.145098, 0.247059, 1 )
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 8.0
expand_margin_top = 8.0

[node name="TemplateElementsContainer" type="VBoxContainer" groups=["config_description_toggle", "config_key_owner", "config_template_element"]]
margin_top = 88.0
margin_right = 1900.0
margin_bottom = 207.0
script = ExtResource( 3 )

[node name="HeaderBG" type="PanelContainer" parent="."]
margin_right = 1900.0
margin_bottom = 53.0
custom_styles/panel = SubResource( 8 )

[node name="Header" type="VBoxContainer" parent="HeaderBG"]
margin_top = 2.0
margin_right = 1900.0
margin_bottom = 49.0
custom_constants/separation = 0

[node name="Top" type="HBoxContainer" parent="HeaderBG/Header"]
margin_right = 1900.0
margin_bottom = 30.0

[node name="Expand" type="TextureButton" parent="HeaderBG/Header/Top"]
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_right = 16.0
margin_bottom = 30.0
rect_min_size = Vector2( 16, 21 )
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Name" type="Label" parent="HeaderBG/Header/Top"]
unique_name_in_owner = true
margin_left = 20.0
margin_right = 60.0
margin_bottom = 30.0
mouse_filter = 1
theme_type_variation = "Label_24"
text = "Test"

[node name="ElementCount" type="Label" parent="HeaderBG/Header/Top"]
self_modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 64.0
margin_top = 5.0
margin_right = 64.0
margin_bottom = 25.0
mouse_filter = 1
theme_type_variation = "LabelBold"

[node name="OverriddenLabel" type="Label" parent="HeaderBG/Header/Top"]
visible = false
margin_left = 68.0
margin_top = 7.0
margin_right = 233.0
margin_bottom = 22.0
size_flags_horizontal = 9
theme_type_variation = "LabelSmall"
custom_colors/font_color = Color( 0.803922, 0.631373, 0.109804, 1 )
text = "(overriden by external config file)"

[node name="VarValueIsNull" type="Label" parent="HeaderBG/Header/Top"]
visible = false
modulate = Color( 1, 1, 1, 0.439216 )
margin_left = 66.0
margin_top = 5.0
margin_right = 981.0
margin_bottom = 25.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
theme_type_variation = "LabelCode"
text = "= null"

[node name="Spacer" type="Control" parent="HeaderBG/Header/Top"]
margin_left = 68.0
margin_right = 1900.0
margin_bottom = 30.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="ButtonSetToNull" parent="HeaderBG/Header/Top" instance=ExtResource( 6 )]
visible = false
modulate = Color( 1, 1, 1, 0.235294 )
margin_left = 1875.0
margin_right = 1900.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "To null"
size_flags_horizontal = 10
size_flags_vertical = 5
size_flags_stretch_ratio = 0.0
flat = true
icon_tex = ExtResource( 7 )
icon_margin = 3

[node name="ButtonAddValue" parent="HeaderBG/Header/Top" instance=ExtResource( 6 )]
visible = false
margin_left = 1867.0
margin_right = 1900.0
hint_tooltip = "Add Value"
size_flags_horizontal = 0
icon_tex = ExtResource( 5 )
icon_margin = 3

[node name="DescriptionContainer" type="HBoxContainer" parent="HeaderBG/Header"]
unique_name_in_owner = true
margin_top = 30.0
margin_right = 1900.0
margin_bottom = 47.0
custom_constants/separation = 0

[node name="Spacer" type="Control" parent="HeaderBG/Header/DescriptionContainer"]
margin_right = 18.0
margin_bottom = 17.0
rect_min_size = Vector2( 18, 0 )

[node name="Description" type="Label" parent="HeaderBG/Header/DescriptionContainer"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 18.0
margin_right = 1900.0
margin_bottom = 17.3333
size_flags_horizontal = 3
size_flags_vertical = 0
theme_type_variation = "LabelSmallMedium"
text = "Help Text"
autowrap = true

[node name="HSeparator" type="HSeparator" parent="HeaderBG/Header"]
visible = false
modulate = Color( 1, 1, 1, 0.352941 )
margin_top = 36.0
margin_right = 1900.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Margin" type="PanelContainer" parent="."]
show_behind_parent = true
margin_top = 57.0
margin_right = 1900.0
margin_bottom = 139.0
custom_styles/panel = SubResource( 5 )

[node name="Content" type="VBoxContainer" parent="Margin"]
margin_left = 20.0
margin_top = 10.0
margin_right = 1900.0
margin_bottom = 62.0
custom_constants/separation = 20

[node name="Elements" type="VBoxContainer" parent="Margin/Content"]
margin_right = 1880.0
custom_constants/separation = 20

[node name="HSeparator" type="HSeparator" parent="Margin/Content"]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
margin_top = 5.0
margin_right = 1885.0
margin_bottom = 9.0

[node name="AddButton" type="Button" parent="Margin/Content"]
margin_left = 882.0
margin_top = 20.0
margin_right = 998.0
margin_bottom = 52.0
size_flags_horizontal = 6
text = "Add element"

[connection signal="gui_input" from="HeaderBG/Header" to="." method="_on_Header_gui_input"]
[connection signal="toggled" from="HeaderBG/Header/Top/Expand" to="." method="_on_Expand_toggled"]
[connection signal="pressed" from="HeaderBG/Header/Top/ButtonSetToNull" to="." method="_on_ButtonSetToNull_pressed"]
[connection signal="pressed" from="HeaderBG/Header/Top/ButtonAddValue" to="." method="_on_ButtonAddValue_pressed"]
[connection signal="pressed" from="Margin/Content/AddButton" to="." method="_on_AddButton_pressed"]
